# django-f-exp

./: .env  db.sqlite3  hello.py  makefile  manage.py  pyproject.toml  requirements.txt
core/: settings.py  urls.py
coreApp/: asgi.py  settings.py  urls.py  utility.py  wsgi.py
f_exp/: apps.py  asgi.py  settings.py  wsgi.py
q_exp/: apps.py
