[project]
name = "django-f-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.4",
    "django-extensions>=3.2.3",
    "djangorestframework>=3.15.2",
    "django-debug-toolbar>=4.4.6",
    "django-cors-headers>=4.6.0",
    "django-dotenv>=1.4.2",
    "python-dotenv>=1.0.1",
]
